force-app/main/default/objects/Form_Definition_Version__c/Form_Definition_Version__c.object-meta.xml
<CustomObject>
    <label>EDF Form Definition Version</label>
    <nameField>
        <displayFormat>FDV-{0000}</displayFormat>
        <label>Form Definition Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Definition Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>