force-app/main/default/objects/Form_Definition_Version__c/fields/Form_Definition__c.field-meta.xml
<CustomField>
    <fullName>Form_Definition__c</fullName>
    <label>Form Definition</label>
    <referenceTo>Form_Definition__c</referenceTo>
    <relationshipName>Form_Definition_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>