force-app/main/default/objects/Form_Definition_Version__c/fields/Read_Only_Form__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read Only Form</label>
    <type>Checkbox</type>
</CustomField>